# blobnet

./: Cargo.toml  README.md
.github/workflows/: ci.yml  upload.yml
blobnet/: Cargo.toml
blobnet/benches/: read_benchmark.rs
blobnet/examples/: README.md  cached_speed.rs  read_1gb.rs  speed.rs  throughput.rs
blobnet/src/: client.rs  fast_aio.rs  handler.rs  lib.rs  main.rs  provider.rs  server.rs  test_provider.rs  utils.rs
blobnet/tests/: cached_test.rs  files_test.rs  prop_test.rs
named-retry/: Cargo.toml  README.md
named-retry/src/: lib.rs
