[package]
name = "blobnet"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "Non-volatile, distributed file cache backed by content-addressed storage."
repository = "https://github.com/modal-labs/blobnet"
documentation = "https://docs.rs/blobnet"
keywords = ["storage", "low-latency", "distributed", "cache"]
categories = ["asynchronous", "network-programming", "filesystem"]
readme = "../README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "3.1.6", features = ["derive", "env"] }
fastrand = "1.8.0"
hyper = { version = "0.14.18", features = ["full"] }
named-retry = { path = "../named-retry" }
sha2 = "0.10.2"
shutdown = "0.2.1"
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["full"] }
