[package]
name = "blobnet"
version = "0.2.2"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "Non-volatile, distributed file cache backed by content-addressed storage."
repository = "https://github.com/modal-labs/blobnet"
documentation = "https://docs.rs/blobnet"
keywords = ["storage", "low-latency", "distributed", "cache"]
categories = ["asynchronous", "network-programming", "filesystem"]
readme = "../README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
async-trait = "0.1.58"
auto_impl = "1.0.1"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
aws-types = "0.49.0"
base64 = "0.13.1"
clap = { version = "4.0.18", features = ["derive", "env"] }
fastrand = "1.8.0"
hashlink = "0.8.1"
hex = "0.4.3"
hyper = { version = "0.14.18", features = ["full"] }
hyperlocal = "0.8.0"
named-retry = { path = "../named-retry", version = "0.2.0" }
parking_lot = "0.12.1"
sha2 = "0.10.2"
shutdown = "0.2.1"
tempfile = "3.3.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["io"] }

[dev-dependencies]
quickcheck = "1.0.3"
